--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>TOAL Programming Language</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <header>
+      <h1>TOAL Programming Language</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#syntax">Syntax</a></li>
+          <li><a href="#downloads">Downloads</a></li>
+          <li><a href="#documentation">Documentation</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Welcome to TOAL</h2>
+        <p>TOAL is a modern programming language designed for simplicity and ease of use. It is perfect for beginners and experienced programmers alike.</p>
+        <p>With TOAL, you can create powerful programs and applications using a simple and intuitive syntax. Whether you're building a small utility or a large-scale system, TOAL has everything you need to get the job done.</p>
+        <p>So why wait? Start coding with TOAL today and discover the joy of programming!</p>
+      </section>
+      <section id="features">
+        <h2>Features</h2>
+        <ul>
+          <li>Simple and intuitive syntax</li>
+          <li>High-level constructs for easy programming</li>
+          <li>Object-oriented design for modularity and flexibility</li>
+          <li>Fast and efficient execution</li>
+          <li>Compatible with popular libraries and frameworks</li>
+        </ul>
+      </section>
+      <section id="syntax">
+        <h2>Syntax</h2>
+        <p>TOAL uses a simple and intuitive syntax that makes programming a breeze. Here's an example:</p>
+        <pre>
+          <code>
+            function greet(name) {
+              print("Hello, " + name + "!");
+            }
+
+            greet("World");
+          </code>
+        </pre>
+      </section>
+      <section id="downloads">
+        <h2>Downloads</h2>
+        <p>TOAL is available for download on the following platforms:</p>
+        <ul>
+          <li><a href="#">Windows</a></li>
+          <li><a href="#">MacOS</a></li>
+          <li><a href="#">Linux</a></li>
+        </ul>
+      </section>
+      <section id="documentation">
+        <h2>Documentation</h2>
+        <p>Get started with TOAL using our comprehensive documentation:</p>
+        <ul>
+          <li><a href="#">Installation guide</a></li>
+          <li><a href="#">Programming tutorial</a></li>
+          <li><a href="#">API reference</a></li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2023 TOAL Programming Language. All rights reserved.</p>
+    </footer>
+  </body>
+</html>
