--- a/index.html
+++ b/index.html
@@ -4,6 +4,97 @@
     <title>TOAL Programming Language</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      /* Basic styles for the page */
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        font-size: 16px;
+        color: #333;
+        background-color: #f5f5f5;
+      }
+      h1, h2, h3 {
+        margin-top: 0;
+      }
+      header {
+        background-color: #007bff;
+        color: #fff;
+        padding: 10px;
+      }
+      nav ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: flex;
+      }
+      nav li {
+        margin-right: 10px;
+      }
+      nav a {
+        color: #fff;
+        text-decoration: none;
+      }
+      nav a:hover {
+        text-decoration: underline;
+      }
+      main {
+        padding: 20px;
+        max-width: 800px;
+        margin: 0 auto;
+      }
+      section {
+        margin-bottom: 30px;
+      }
+      pre {
+        background-color: #f8f8f8;
+        border: 1px solid #ccc;
+        padding: 10px;
+        overflow-x: auto;
+      }
+      code {
+        font-family: monospace;
+      }
+      footer {
+        text-align: center;
+        padding: 10px;
+        background-color: #007bff;
+        color: #fff;
+      }
+
+      /* Additional styles for the page */
+      h1 {
+        font-size: 48px;
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      h2 {
+        font-size: 36px;
+        margin-bottom: 10px;
+      }
+      p {
+        line-height: 1.5;
+        margin-bottom: 20px;
+      }
+      ul {
+        line-height: 1.5;
+        margin-bottom: 20px;
+      }
+      li {
+        margin-bottom: 5px;
+      }
+      a.button {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.2s;
+      }
+      a.button:hover {
+        background-color: #0056b3;
+      }
+    </style>
   </head>
   <body>
     <header>
