--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
       }
       code {
         font-family: monospace;
+        background-color: #000;
+        color: #fff;
       }
       footer {
         text-align: center;
