--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         margin-bottom: 30px;
       }
       pre {
-        background-color: #f8f8f8;
+        background-color: #000;
         border: 1px solid #ccc;
         padding: 10px;
         overflow-x: auto;
