--- a/index.html
+++ b/index.html
@@ -133,11 +133,24 @@
         <p>TOAL uses a simple and intuitive syntax that makes programming a breeze. Here's an example:</p>
         <pre>
           <code>
-            function greet(name) {
-              print("Hello, " + name + "!");
+            automate greet(name) {
+              print "Hello" + name + "!";
             }
 
             greet("World");
+          </code>
+        </pre>
+        <pre>
+          <code>
+            make x with 1;
+            
+            add 1 to x;
+            subtract 1 from x;
+            multiply x by 1;
+            divide x by 1;
+            
+            change x to 5;
+            print x plus 5;
           </code>
         </pre>
       </section>
