--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         border: 10px solid #ccc;
         padding: 1px;
         overflow-x: auto;
+        text-align: left;
       }
       code {
         font-family: monospace;
