--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         font-family: Arial, sans-serif;
         font-size: 16px;
         color: #333;
-        background-color: #f5f5f5;
+        background-color: #ffffe0;
       }
       h1, h2, h3 {
         margin-top: 0;
       }
       header {
-        background-color: #007bff;
-        color: #fff;
+        background-color: #964B00;
+        color: #000;
         padding: 10px;
       }
       nav ul {
