--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         font-size: 16px;
         color: #333;
         background-color: #ffffe0;
+        background-image: linear-gradient(rgba(0,0,0,0.1) 1px, transparent 1px), linear-gradient(90deg, rgba(0,0,0,0.1) 1px, transparent 1px);
+        background-size: 20px 20px;
       }
       h1, h2, h3 {
         margin-top: 0;
@@ -22,10 +24,12 @@
         padding: 10px;
       }
       nav ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        display: flex;
+          margin: 0;
+          padding: 0;
+          list-style: none;
+          display: flex;
+          font-size: 20px;
+          font-weight: bold;
       }
       nav li {
         margin-right: 10px;
