--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         background-color: #964B00;
         color: #000;
         padding: 10px;
+        background-image: url('marble-texture.jpg');
+			  background-repeat: repeat;
+			  background-size: cover;
       }
       nav ul {
           margin: 0;
