added link to github

--- a/index.html
+++ b/index.html
@@ -175,9 +175,7 @@
         <h2>Documentation</h2>
         <p>Get started with TOAL using our comprehensive documentation:</p>
         <ul>
-          <li><a href="#">Installation guide</a></li>
-          <li><a href="#">Programming tutorial</a></li>
-          <li><a href="#">API reference</a></li>
+          <li><a href="https://github.com/cplant27/TOAL">GitHub</a></li>
         </ul>
       </section>
     </main>
