moved stuff around and added about me section

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
           <li><a href="#">Home</a></li>
           <li><a href="#features">Features</a></li>
           <li><a href="#syntax">Syntax</a></li>
-          <li><a href="#downloads">Downloads</a></li>
           <li><a href="#documentation">Documentation</a></li>
+          <li><a href="#about us">About Us</a></li>
         </ul>
       </nav>
     </header>
@@ -162,20 +162,20 @@
           </code>
         </pre>
       </section>
-      <section id="downloads">
+      <section id="documentation">
+        <h2>Documentation</h2>
+        <p>Get started with TOAL using our comprehensive documentation:</p>
+        <ul>
+          <li><a href="https://github.com/cplant27/TOAL">GitHub</a></li>
+        </ul>
+      </section>
+      <section id="about us">
         <h2>Downloads</h2>
         <p>TOAL is available for download on the following platforms:</p>
         <ul>
           <li><a href="#">Windows</a></li>
           <li><a href="#">MacOS</a></li>
           <li><a href="#">Linux</a></li>
-        </ul>
-      </section>
-      <section id="documentation">
-        <h2>Documentation</h2>
-        <p>Get started with TOAL using our comprehensive documentation:</p>
-        <ul>
-          <li><a href="https://github.com/cplant27/TOAL">GitHub</a></li>
         </ul>
       </section>
     </main>
