formatted about us section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
         font-size: 36px;
         margin-bottom: 10px;
       }
+      h3 {
+        font-size: 28px;
+        margin-bottom: 5px;
+      }
       p {
         line-height: 1.5;
         margin-bottom: 20px;
@@ -121,10 +125,10 @@
     </header>
     <main>
       <section>
-        <h2>Welcome to TOAL</h2>
-        <p>TOAL is a modern programming language designed for simplicity and ease of use. It is perfect for beginners and experienced programmers alike.</p>
-        <p>With TOAL, you can create powerful programs and applications using a simple and intuitive syntax. Whether you're building a small utility or a large-scale system, TOAL has everything you need to get the job done.</p>
-        <p>So why wait? Start coding with TOAL today and discover the joy of programming!</p>
+        <h2>Welcome to T.O.A.L.</h2>
+        <p>The Totally Original and Applicable Language (T.O.A.L.) is a modern programming language designed for simplicity and ease of use. It is perfect for beginners and experienced programmers alike.</p>
+        <p>With T.O.A.L., you can create powerful programs and applications using a simple and intuitive syntax. Whether you're building a small utility or a large-scale system, T.O.A.L. has everything you need to get the job done.</p>
+        <p>So why wait? Start coding with T.O.A.L. today and discover the joy of programming!</p>
       </section>
       <section id="features">
         <h2>Features</h2>
@@ -138,7 +142,7 @@
       </section>
       <section id="syntax">
         <h2>Syntax</h2>
-        <p>TOAL uses a simple and intuitive syntax that makes programming a breeze. Here's an example:</p>
+        <p>T.O.A.L. uses a simple and intuitive syntax that makes programming a breeze. Here's an example:</p>
         <pre>
           <code>
             automate greet(name) {
@@ -164,18 +168,22 @@
       </section>
       <section id="documentation">
         <h2>Documentation</h2>
-        <p>Get started with TOAL using our comprehensive documentation:</p>
+        <p>Get started with T.O.A.L. using our comprehensive documentation:</p>
         <ul>
           <li><a href="https://github.com/cplant27/TOAL">GitHub</a></li>
         </ul>
       </section>
       <section id="about us">
-        <h2>Downloads</h2>
-        <p>TOAL is available for download on the following platforms:</p>
+        <h2>About Us</h2>
         <ul>
-          <li><a href="#">Windows</a></li>
-          <li><a href="#">MacOS</a></li>
-          <li><a href="#">Linux</a></li>
+          <h3>CJ Plantemoli</h3>
+            <p>CJ Plantemoli</p>
+          <h3>Chris Jansky</h3>
+            <p>Chris Jansky</p>
+          <h3>Sam Richard</h3>
+            <p>Sam Richard</p>
+          <h3>Jayden Craig</h3>
+            <p>Jayden Craig</p>
         </ul>
       </section>
     </main>
