--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TOAL Programming Language</title>
+    <title>T.O.A.L. Programming Language</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -82,7 +82,7 @@
         margin-bottom: 10px;
       }
       h3 {
-        font-size: 28px;
+        font-size: 24px;
         margin-bottom: 5px;
       }
       p {
@@ -112,7 +112,7 @@
   </head>
   <body>
     <header>
-      <h1>TOAL Programming Language</h1>
+      <h1>T.O.A.L. Programming Language</h1>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
@@ -133,20 +133,20 @@
       <section id="features">
         <h2>Features</h2>
         <ul>
-          <li>Simple and intuitive syntax</li>
-          <li>High-level constructs for easy programming</li>
-          <li>Object-oriented design for modularity and flexibility</li>
-          <li>Fast and efficient execution</li>
-          <li>Compatible with popular libraries and frameworks</li>
+          <li>Feel like a professional with our simple syntax and commands</li>
+          <li>Contain all the data you need with our built in list structure</li>
+          <li>Easily and elegantly repeat tasks or iterate over data with loops</li>
+          <li>Make decisions with ease using conditional statements</li>
+          <li>Automate your code and call it anytime you want with custom automations</li>
         </ul>
       </section>
       <section id="syntax">
         <h2>Syntax</h2>
-        <p>T.O.A.L. uses a simple and intuitive syntax that makes programming a breeze. Here's an example:</p>
+        <p>T.O.A.L. uses a simple and intuitive syntax that makes programming a breeze. Here are some examples:</p>
         <pre>
           <code>
             automate greet(name) {
-              print "Hello" + name + "!";
+              print "Hello " + name + " !";
             }
 
             greet("World");
@@ -188,7 +188,7 @@
       </section>
     </main>
     <footer>
-      <p>&copy; 2023 TOAL Programming Language. All rights reserved.</p>
+      <p>&copy; 2023 T.O.A.L. Programming Language. All rights reserved.</p>
     </footer>
   </body>
 </html>
