--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <section id="features">
         <h2>Features</h2>
         <ul>
-          <li>Feel like a professional with our simple syntax and commands</li>
+          <li>Feel like a pro with our simple syntax and commands</li>
           <li>Contain all the data you need with our built in list structure</li>
           <li>Easily and elegantly repeat tasks or iterate over data with loops</li>
           <li>Make decisions with ease using conditional statements</li>
