--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+      @media only screen and (max-width: 767px) {
+        /* styles for screens smaller than 768px */
+        body {
+          max-width: 1000px;
+          margin: 0 auto;
+        }
+      }
       /* Basic styles for the page */
       body {
         margin: 0;
