--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </pre>
         <pre>
           <code>
-            # While Loops
+            # While loops
             
             make x with 0;
 
@@ -198,7 +198,7 @@
 
             print x;
 
-            # For Loops
+            # For loops
             
             make this_list with [1, "hello", [1,2,3], []];
 
@@ -209,7 +209,7 @@
         </pre>
         <pre>
           <code>
-            # Conditionals
+            # Even conditionals
 
             make x with 5;
 
