--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
             multiply x by 1;
             divide x by 1;
 
-            # no more of those confusing math symbols!
-            # simple plain english math
+            # Say goodbye to those confusing math symbols!
             
             change x to 5;
             make a with 2 plus x minus 7;
