--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
     <main>
       <section>
         <h2>Welcome to T.O.A.L.</h2>
-        <p>The Totally Original and Applicable Language (T.O.A.L.) is a modern programming language designed for simplicity and ease of use. It is perfect for beginners and experienced programmers alike.</p>
-        <p>With T.O.A.L., you can create powerful programs and applications using a simple and intuitive syntax. Whether you're building a small utility or a large-scale system, T.O.A.L. has everything you need to get the job done.</p>
-        <p>So why wait? Start coding with T.O.A.L. today and discover the joy of programming!</p>
+        <p>Introducing the Totally Original and Applicable Language (T.O.A.L.), a revolutionary new coding language that is designed to make programming more accessible to everyone.
+          T.O.A.L. is written like plain English, so it is easy to understand and use, even for those with no prior coding experience. 
+          With its simple syntax and intuitive structure, this language makes it easy for anyone to create powerful and complex programs with ease. 
+          Whether you are a seasoned programmer or just starting out, this language is the perfect tool for creating efficient and effective code. So why wait? 
+          Start coding today with this new and user-friendly language!</p>
       </section>
       <section id="features">
         <h2>Features</h2>
