--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h2>Welcome to T.O.A.L.</h2>
         <p>Introducing the Totally Original and Applicable Language (T.O.A.L.), a revolutionary new coding language that is designed to make programming more accessible to everyone.
           T.O.A.L. is written like plain English, so it is easy to understand and use, even for those with no prior coding experience. 
-          The simple syntax and intuitive structure makes it easy for anyone to create powerful and complex programs with ease. </p>
+          The simple syntax and intuitive structure make it easy for anyone to create powerful and complex programs with ease. </p>
         <p>Whether you are a seasoned programmer or just starting out, this language is the perfect tool for creating efficient and effective code. So why wait? 
           Start coding today with this new and user-friendly language!</p>
       </section>
