--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       }
       nav a:hover {
         text-decoration: underline;
+        font-weight: none;
       }
       main {
         padding: 20px;
