--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         font-family: monospace;
         background-color: #000;
         color: #fff;
+	text-allign: left;
       }
       footer {
         text-align: center;
